<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.def.androidmysql.progressive"
    android:background="#FFF">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/linearLayout3"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/basic" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressive"
        android:paddingTop="30dp">

        <ImageView
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:src="@mipmap/rwdbd"
            android:layout_width="wrap_content" />

        <EditText
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:hint="ENTER BIRTHDAY REWARD" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="SELECT PROGRAM TEMPLATE"
        android:id="@+id/slctproglevel"
        android:paddingTop="30dp"
        android:paddingLeft="20dp"
        android:paddingBottom="30dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_punch_card"
            android:id="@+id/punchcard"
            android:background="@drawable/roundcorner"
            android:textColor="#FFF" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_prog_discount"
            android:id="@+id/progdiscount"
            android:background="@drawable/roundcorner"
            android:layout_marginLeft="6dp"
            android:textColor="#FFF" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_alt_discount"
            android:id="@+id/altdiscount"
            android:background="@drawable/roundcorner"
            android:layout_marginLeft="6dp"
            android:textColor="#0F0" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="70dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:text="@string/increas_disct_each_vst"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/eachvisitdisct"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/visitextval"
            android:id="@+id/txtvisitnum"
            android:layout_weight="1" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="247dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.80">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="1"
                android:id="@+id/textView3"
                android:layout_weight="0.25" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="3"
                android:id="@+id/textView2"
                android:layout_weight="0.25" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="5"
                android:id="@+id/textView4"
                android:layout_weight="0.25" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="7"
                android:id="@+id/textView5"
                android:layout_weight="0.25" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="9"
                android:id="@+id/textView6"
                android:layout_weight="0.25" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/discounttextval"
            android:id="@+id/discounttext"
            android:layout_weight="0.35" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="247dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.80"
            android:paddingBottom="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="5%"
                android:id="@+id/prdisc1"
                android:layout_weight="0.25" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="7%"
                android:id="@+id/prdisc2"
                android:layout_weight="0.25" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="10%"
                android:id="@+id/prdisc3"
                android:layout_weight="0.25" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="12%"
                android:id="@+id/prdisc4"
                android:layout_weight="0.25" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="15%"
                android:id="@+id/prdisc5"
                android:layout_weight="0.25" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/txtvalfordiscountslevel"
            android:id="@+id/txtdiscountslevel"
            android:layout_weight="0.30"
            android:layout_marginTop="10dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.70"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbtlow"
                android:text="@string/btn_low_disck"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbtmed"
                android:text="@string/btn_med_disck"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbthigh"
                android:text="@string/btn_high_disck"
                />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_sub_prog"
        android:id="@+id/btn_prog_sub"
        android:background="@drawable/roundcorner"
        android:textColor="#FFF"
        android:layout_marginTop="10dp" />

</LinearLayout>

