<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.riiwards.def.riiwardsloyalty.SignInActivity"
    android:background="#FFF"
    android:id="@+id/f">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:src="@mipmap/basicsignup" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="350dp"
        android:id="@+id/tableRow2">

    </TableRow>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="SELECT PROGRAM TEMPLATE"
        android:id="@+id/txtprogramtemplate"
        android:layout_alignTop="@+id/tableRow2"
        android:layout_marginTop="75dp"
        android:textSize="18dp"
        android:textIsSelectable="false"
        android:layout_marginLeft="20dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/txtprogramtemplate"
        android:layout_alignStart="@+id/txtprogramtemplate"
        android:layout_marginTop="390dp"
        android:layout_centerVertical="true"
        android:baselineAligned="false"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/panchcard"
                android:id="@+id/punchcard"
                android:layout_column="2"
                android:background="@drawable/roundcorner"
                android:textColor="#FFF" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progdiscount"
                android:id="@+id/progdiscount"
                android:layout_column="10"
                android:background="@drawable/roundcorner"
                android:layout_marginLeft="10dp"
                android:textColor="#FFF" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altdiscount"
                android:id="@+id/altdiscount"
                android:layout_column="6"
                android:background="@drawable/roundcorner"
                android:layout_marginLeft="10dp"
                android:textColor="#FFF" />
        </TableRow>
    </TableLayout>

</RelativeLayout>
